--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^1.1.6
   firebase_core: ^2.15.1
   firebase_database: ^10.2.5
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
